--- a/Vector(12.10.5.19)/Python/vector.tex
+++ b/Vector(12.10.5.19)/Python/vector.tex
@@ -44,7 +44,7 @@ Substituting \eqref{eq:3} \eqref{eq:2} in \eqref{eq:1}, we get
   \begin{center}
     \includegraphics[width=\columnwidth]{/sdcard/Documents/Python/figs/vector.png}
   \end{center}
-	\caption{The vectors \vec{a} = 1 and \vec{b} = 1}
+	\caption{The vectors \vec{a} = 1 and \vec{b} = n}
   \label{fig:12.10.5.19}
 \end{figure}
 \end{document}
